--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="dataproj.scss">
+    <link rel="stylesheet" href="dataproj.css">
     <link rel="stylesheet" href="dataproj.js">
 </head>
 
