--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <link rel="stylesheet" href="dataproj.css">
     <link rel="stylesheet" href="dataproj.js">
 </head>
