--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <!--Dit is de goede versie 14:05-->
 
 <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dataproj.css">
-    <link rel="stylesheet" href="dataproj.js">
 </head>
 
 </body>
     <div class="page">
-      <span class="menu_toggle">
+      <span class="menu_toggle" id="menu_toggle" onclick="myFunction()">
         <i class="menu_open fa fa-bars fa-lg"></i>
         <i class="menu_close fa fa-times fa-lg"></i>
       </span>
@@ -20,14 +18,27 @@
         <li><a href="#"><i class="icon fa fa-coffee fa-2x"></i> Coffee</a></li>
         <li><a href="#"><i class="icon fa fa-heart fa-2x"></i> Please</a></li>
       </ul>
-      <main class="content">
+      <main class="content" id="content" onclick="myFunction2()">
         <div class="content_inner">
           <h1>The mysterious red button of doom</h1>
-          <p>Do <strong>not</strong> push that big, red button in the corner. People will die. You have been warned. Do&hellip; not do it.</p>
+          <p>Do <strong>not</strong> push that big, red button in the corner. People will die. You have been warned. Do not do it.</p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel dolorem, ducimus laudantium, earum eos natus sint voluptatum dolores fuga quibusdam consectetur dicta. Laudantium enim inventore iusto ducimus est velit aperiam tempora quibusdam id dolore natus perferendis, debitis distinctio optio repellendus, repellat molestias delectus harum eius, reiciendis dicta ipsum architecto! Eligendi expedita in beatae, placeat unde voluptatibus voluptates consectetur explicabo laudantium, officiis ad nihil. Beatae similique voluptate sequi voluptatem delectus iure in omnis, fuga ipsam nulla ipsum architecto, iste debitis nisi labore quisquam odio accusantium corporis sint perspiciatis. Excepturi earum nobis soluta, doloremque nihil dolorum illum quaerat magnam nemo non sed!</p>
+          <p>Lorem ipsum dolor sit amet, accusantium corporis sint perspiciatis. Excepturi earum nobis soluta, doloremque nihil dolorum illum quaerat magnam nemo non sed!</p>
         </div>
       </main>
     </div>
+    <script>
+
+    function myFunction() {
+        menuelement = document.getElementById("menu_toggle");
+        menuelement.classlist.toggle('shazam')
+    }
+    function myFunction2() {
+        contelement = document.getElementById("content");
+        contelement.classlist.toggle('shazam')
+    }
+
+
+    </script>
 </body>
 </html>
