--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="HTML/dataproj.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
+
 
 </body>
     <div id="navigation">
       <nav>
         <div class="close"></div>
-        <a href="#">Home</a> <a href="#">Map</a> <a href="#">Statistics</a> <a href="#">About us</a> </nav>
+        <a href="#">Home</a> <a href="HTML/maps.html">Map</a> <a href="#">Statistics</a> <a href="#">About us</a> </nav>
     </div>
     <div id="main-content">
       <div id="content-front">
@@ -29,17 +28,7 @@
               <p>A bullet will never travel as fast as a bullet! So with the light from people's screens, we hope to be faster then a bullet and reach people's minds and human hearth's</p>
 
               <p>On this site we will inform you about the statistics surrounding gun violence in the United States of America!</p>
-              <div class="jquery-script-ads" style="margin:30px auto;"><script type="text/javascript"><!--
-              google_ad_client = "ca-pub-2783044520727903";
-              /* jQuery_demo */
-              google_ad_slot = "2780937993";
-              google_ad_width = 728;
-              google_ad_height = 90;
-              //-->
-              </script>
-              <script type="text/javascript"
-              src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-              </script></div>
+
           </section>
           <section></section>
           <section></section>
