--- a/CODE/HTML/bars.html
+++ b/CODE/HTML/bars.html
@@ -9,80 +9,90 @@
     </script>
     <title>DangerousGuns</title>
     <style>
-      /* Style the header with a grey background and some padding */
+    * {box-sizing: border-box;}
+
+      body {
+      margin: 0;
+      font-family: Arial;
+      }
+
       .header {
-        overflow: hidden;
-        background-color: #f1f1f1;
-        padding: 20px 10px;
+      overflow: hidden;
+      background-color: #f1f1f1;
+      padding: 20px 10px;
       }
 
-      /* Style the header links */
       .header a {
-        float: left;
-        color: black;
-        text-align: center;
-        padding: 12px;
-        text-decoration: none;
-        font-size: 18px;
-        line-height: 25px;
-        border-radius: 4px;
+      float: left;
+      color: black;
+      text-align: center;
+      padding: 12px;
+      text-decoration: none;
+      font-size: 18px;
+      line-height: 25px;
+      border-radius: 4px;
       }
 
-      /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
       .header a.logo {
-        font-size: 25px;
-        font-weight: bold;
+      font-size: 25px;
+      font-weight: bold;
       }
 
-      /* Change the background color on mouse-over */
       .header a:hover {
-        background-color: #ddd;
-        color: black;
+      background-color: #ddd;
+      color: black;
       }
 
-      /* Style the active/current link*/
       .header a.active {
-        background-color: dodgerblue;
-        color: white;
+      background-color: dodgerblue;
+      color: white;
+      }
+      .row1{
+        margin-left: 30%;
+        text-align:center;
+      }
+      .row2{
+        margin-left: 20%;
+        text-align:center;
       }
 
-      /* Float the link section to the right */
       .header-right {
-        float: right;
+      float: right;
       }
-
-      /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
       @media screen and (max-width: 500px) {
-        .header a {
-          float: none;
-          display: block;
-          text-align: left;
-        }
-        .header-right {
-          float: none;
-        }
+      .header a {
+        float: none;
+        display: block;
+        text-align: left;
       }
-      </style>
+      .header-right {
+        float: none;
+      }
+    }
+    </style>
 </head>
 
 <body>
   <div class="header">
-  <a href="#default" class="logo">DangerousGuns</a>
-  <div class="header-right">
-    <a class="active" href="../../index.html">Home</a>
-    <a href="../HTML/bars.html">Bars</a>
-    <a href="../HTML/maps.html">Maps</a>
+    <a  class="logo">DangerousGuns</a>
+    <div class="header-right">
+      <a class="active" href="../../index.html">Home</a>
+      <a href="bars.html">Bars</a>
+      <a href="maps.html">Maps</a>
+    </div>
   </div>
-  </div>
-  <section>
+  <section class="row1">
     <div class="bk-root">
         <div class="bk-plotdiv" id="f1113a16-4428-4d05-a675-3a083ec03dc0"></div>
     </div>
+  </section>
+  <section class="row1">
     <div class="bk-root">
         <div class="bk-plotdiv" id="003851ca-0098-42cc-b2bd-6378ea53aa32"></div>
     </div>
+    </div>
   </section>
-  <section>
+  <section class="row2">
     <div class="bk-root">
         <div class="bk-plotdiv" id="205d0885-5e77-4f22-98a3-34890ad8d194"></div>
     </div>
