--- a/index.html
+++ b/index.html
@@ -9,78 +9,93 @@
   </script>
   <title>DangerousGuns</title>
   <style>
-    /* Style the header with a grey background and some padding */
+  * {box-sizing: border-box;}
+
+    body {
+    background-image: url("DOCS/gun.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    font-family: Arial;
+    }
+
     .header {
-      overflow: hidden;
-      background-color: #f1f1f1;
-      padding: 20px 10px;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 20px 10px;
     }
 
-    /* Style the header links */
     .header a {
-      float: left;
-      color: black;
-      text-align: center;
-      padding: 12px;
-      text-decoration: none;
-      font-size: 18px;
-      line-height: 25px;
-      border-radius: 4px;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
     }
 
-    /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
     .header a.logo {
-      font-size: 25px;
-      font-weight: bold;
+    font-size: 25px;
+    font-weight: bold;
     }
 
-    /* Change the background color on mouse-over */
     .header a:hover {
-      background-color: #ddd;
-      color: black;
+    background-color: #ddd;
+    color: black;
     }
 
-    /* Style the active/current link*/
     .header a.active {
-      background-color: dodgerblue;
-      color: white;
+    background-color: dodgerblue;
+    color: white;
     }
 
-    /* Float the link section to the right */
     .header-right {
-      float: right;
-    }
-
-    /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-    @media screen and (max-width: 500px) {
-      .header a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
-      .header-right {
-        float: none;
-      }
+    float: right;
     }
     .intro{
       text-align: center;
-      font-size: 25px;
-      margin-top: 100px;
+      font-size: 20px;
+      margin-top: 300px;
     }
-    </style>
+    p{
+      color: red;
+    }
+
+    @media screen and (max-width: 500px) {
+      body{
+      margin: 0;
+      font-family: Arial;
+      }
+    .header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .header-right {
+      float: none;
+    }
+    .intro{
+      text-align: center;
+      font-size: 15px;
+      margin-top: 20px;
+    }
+  }
+  </style>
 </head>
 
 <body>
   <div class="header">
-  <a href="#default" class="logo">DangerousGuns</a>
-  <div class="header-right">
-    <a class="active" href="index.html">Home</a>
-    <a href="CODE/HTML/bars.html">Bars</a>
-    <a href="CODE/HTML/maps.html">Maps</a>
+    <a class="logo">DangerousGuns</a>
+    <div class="header-right">
+      <a class="active" href="index.html">Home</a>
+      <a href="CODE/HTML/bars.html">Bars</a>
+      <a href="CODE/HTML/maps.html">Maps</a>
+    </div>
   </div>
-</div>
-    <section class="intro">
-
+    <section>
+      <div class="intro">
       <p><strong> "Never bring a knife to a gun fight!"</strong></p>
       <p>This quote is quite often said because you will never be able to reach the shooter with a knife</p>
       <p>We decided to make this site because eventhough sometimes sound travels faster then a bullet, or one could argue a rumour does to, we believe and know one things for certain:</p>
@@ -88,6 +103,7 @@
 
       <p>On this site we will inform you about the statistics surrounding gun violence in the United States of America!</p>
 
+    </div>
   </section>
 </body>
 </html>
