--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       position: sticky;
       position: -webkit-sticky;
       top: 0; /* required */
+      z-index: 99999;
     }
 
     .header {
@@ -60,12 +61,12 @@
     float: right;
     }
     .intro{
-      background-color: white;
       text-align: center;
-      font-size: 25px;
+      font-size: 20px;
       margin-top: 300px;
-      padding-bottom: 15px;
+      background-color: white;
       padding-top: 15px;
+      padding-bottom: 15px;
     }
     p{
       color: black;
@@ -101,10 +102,10 @@
       <a class="active" href="index.html">Home</a>
       <a href="CODE/HTML/incidents.html">Incidents</a>
       <a href="CODE/HTML/bars.html">Involved</a>
-      <a href="CODE/HTML/maps.html">Maps</a>
+      <a href="CODE/HTML/maps.html">Places</a>
     </div>
   </div>
-  </nav>
+</nav>
     <section>
       <div class="intro">
       <p><strong> "Never bring a knife to a gun fight!"</strong></p>
