--- a/CODE/HTML/bars.html
+++ b/CODE/HTML/bars.html
@@ -114,7 +114,7 @@
     <h1>Involved</h1>
     <p>Crimes such as gun violence involve actual persons.</p>
     <p>Our research shows that luckily most of those persons are adults.</p>
-    <p>Eventhough it is known that police men are often sloppy with their reports, a condiderable amount of teens and children were involved these past four years.</p>
+    <p>Even though it is known that police men are often sloppy with their reports, a considerable amount of teens and children were involved these past four years.</p>
   </section>
   <section class="row1">
     <div class="bk-root">
@@ -122,9 +122,9 @@
     </div>
   </section>
   <section style="text-align: center;">
-    <p>The next graph shows that most are of male gender. That doesn't mean women just get cought in crossfire.</p>
-    <p>No because a story has to sides just as there are female police officers, there are woman involved in crime.</p>
-    <p>Some of the incidents are caused by woman or sometimes by gangs which included female suspects.</p>
+    <p>The next graph shows that most people are of male gender. That doesn't mean women just get caught in crossfire.</p>
+    <p>No because a story has two sides just as there are female police officers, there are women involved in crime.</p>
+    <p>Some of the incidents are caused by women and some by gangs which included female suspects.</p>
   </section>
   <section class="row1">
     <div class="bk-root">
@@ -134,7 +134,7 @@
   <section style="text-align: center;">
     <p>The sloppiness of officers is shown in the amount of relationships reported.</p>
     <p>90% was not reported. But from the ones that where, Lovers or former lovers, family and armed robbery take most of the pie in occupation.</p>
-    <p>This leaves nothing to conclude because of the absense of more data. And so no relationships between suspects and victems can be concluded.</p>
+    <p>This leaves nothing to conclude because of the absense of more data.</p>
   </section>
   <section style="margin-left: 20%; min-height:550px;">
     <img src="../../DOCS/relationships.JPG" alt="Relationships" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em; height: 500px; width: 500px;">
