--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <section>
       <div class="intro">
       <h3><strong> "Never bring a knife to a gun fight!"</strong></h3>
-      <p>This quote is quite often said because you will never be able to reach the shooter with a knife</p>
-      <p>We decided to make this site because eventhough sometimes sound travels faster then a bullet, or one could argue a rumour does to, we believe and know one things for certain:</p>
-      <p>A bullet will never travel as fast as light! So with the light from people's screens, we hope to be faster then a bullet and reach people's minds and human hearth's</p>
+      <p>This quote is quite often said because you will never be able to reach the shooter with a knife.</p>
+      <p>We decided to make this site because even though sometimes sound travels faster then a bullet, and one could argue a rumour does too, we are certain about one thing:</p>
+      <p>A bullet will never travel as fast as light! So with the light from people's screens, we hope to be faster than a bullet and reach people's minds and human hearths.</p>
 
       <p>On this site we will inform you about the statistics surrounding gun violence in the United States of America!</p>
 
